--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 						</div>
 				</div>
 			</div>
+			
 			<div class="col-md-3">
 				<div class="panel">
 					<div>
-						<h2>Connect with Me</h2>
+						<h2 class="text-center">Connect with Me</h2>
 					</div>
 
 					<hr>
@@ -62,7 +63,7 @@
 		</div>
 	</div>
 
-	<footer>
+	<footer class="navbar-fixed-bottom">
 		<h6 class="text-center">&copy; Copyright 2016 Justin Carlson</h6>
 	</footer>
 
