completes index.html for desktops and phone screens, removes background photos that are not needed, adds new styles to style.css, adds blank contact.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 	
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
   		<div class="container-fluid">
 
     		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">Justin Carlson's Portfolio</a>
+      			<p class="navbar-brand">Justin Carlson's Portfolio</p>
     		</div>
 
     		<ul class="nav navbar-nav navbar-right">
@@ -26,15 +26,15 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
-				<div class="panel">
+			<div class="col-sm-9">
+				<div class="panel panel-about">
 					<h1 class="panel-heading">About Me</h1>
 
-					<hr>
+					<hr class="hr-about">
 
 						<div class="panel-body">
 
-							<img class="justinCarlsonImg img-rounded pull-left" alt="Photo of Justin Carlson" src="assets/images/Justin_Carlson.png">
+							<img class="justin-carlson-img img-rounded pull-left" alt="Photo of Justin Carlson" src="assets/images/Justin_Carlson.png">
 
 							<p>
 								My name is Justin Carlson and I am a 25 year old aspiring web developer. I grew up in a rural Midwestern town called Manito in the central part of Illinois. As a child I was always interested in computers and how they worked. I can recall the first computer my parents bought for the family, and I was amazed at the interactions you could have with the world through a small box sitting in your living room. Ever since then I have been trying to cultivate my knowledge in the world of computers. 
@@ -47,17 +47,18 @@
 				</div>
 			</div>
 			
-			<div class="col-md-3">
+			<div class="col-sm-3">
 				<div class="panel">
 					<div>
-						<h2 class="text-center">Connect with Me</h2>
+						<h3 class="text-center">Connect with Me</h3>
 					</div>
 
-					<hr>
-
-					<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logoImgs" alt="GitHub Logo" src="assets/images/github.png"></a>
-					<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logoImgs" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
-					<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logoImgs" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
+					<hr class="hr-connect">
+					<div class="text-center">
+						<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logo-imgs logo-img-margin" alt="GitHub Logo" src="assets/images/github.png"></a>
+						<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logo-imgs logo-img-margin" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logo-imgs" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
+					</div>
 				</div>
 			</div>
 		</div>
