completes assignment, adds styles to stlye.css, modifys header and footer in contact.html index.html and portfolio.html, completes grid for portfolio pages, completes portfolio.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-  		<div class="container-fluid">
+	<nav class="navbar navbar-inverse navbar-static-top">
 
     		<div class="navbar-header">
       			<p class="navbar-brand">Justin Carlson's Portfolio</p>
@@ -22,7 +21,6 @@
       			<li><a href="portfolio.html">Portfolio</a></li> 
       			<li><a href="contact.html">Contact</a></li> 
    			</ul>
-  		</div>
 	</nav>
 
 	<div class="container">
@@ -55,17 +53,18 @@
 					</div>
 
 					<hr class="hr-connect">
+					
 					<div class="text-center">
-						<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logo-imgs logo-img-margin" alt="GitHub Logo" src="assets/images/github.png"></a>
-						<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logo-imgs logo-img-margin" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
-						<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logo-imgs" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
+						<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logo-imgs logo-img-margin opacity" alt="GitHub Logo" src="assets/images/github.png"></a>
+						<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logo-imgs logo-img-margin opacity" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logo-imgs opacity" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<footer class="navbar-fixed-bottom">
+	<footer class="navbar-static-bottom footer">
 		<h6 class="text-center">&copy; Copyright 2016 Justin Carlson</h6>
 	</footer>
 
