--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-  		<div class="container-fluid">
+	<nav class="navbar navbar-inverse navbar-static-top">
 
     		<div class="navbar-header">
       			<p class="navbar-brand">Justin Carlson's Portfolio</p>
@@ -22,43 +21,41 @@
       			<li><a href="portfolio.html">Portfolio</a></li> 
       			<li><a href="contact.html">Contact</a></li> 
    			</ul>
-  		</div>
 	</nav>
 
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-9">
 				<div class="panel panel-about">
-					<h1 class="panel-heading">About Me</h1>
+					<h1 class="panel-heading">Contact</h1>
 
 					<hr class="hr-about">
 
-						<div class="panel-body">
-
-							<form action="#" method="post">
+					<div class="panel-body">
+						<form action="#" method="post">
+    						<div>
     							<div>
-    								<div>
-       									<label>Name</label>
-       								</div>
-        							<input class="form-textbox-width" name="name" placeholder="&nbsp;John Smith">
-    							</div>
-    							<div>
-									<div class="form-text-margin">
-        								<label>E-mail</label>
-        							</div>
-        							<input class="form-textbox-width" name="email" type="email" placeholder="&nbsp;example@gmail.com">
-    							</div>
-    							<div>
-    								<div class="form-text-margin">
-        								<label>Message</label>
-        							</div>
-        							<textarea class="form-textarea-size" name="message"></textarea>
-    							</div>
-								<div>
-        							<input id="button" class="btn-primary" name="submit" type="submit" value="Submit">
-    							</div>
-							</form>
-						</div>
+       								<label>Name</label>
+       							</div>
+        						<input class="form-textbox-width" name="name" placeholder="&nbsp;John Smith">
+    						</div>
+    						<div>
+								<div class="form-text-margin">
+        							<label>E-mail</label>
+        						</div>
+        						<input class="form-textbox-width" name="email" type="email" placeholder="&nbsp;example@gmail.com">
+    						</div>
+    						<div>
+    							<div class="form-text-margin">
+        							<label>Message</label>
+        						</div>
+        						<textarea class="form-textarea-size" name="message"></textarea>
+    						</div>
+							<div>
+        						<input id="button" class="btn-primary" name="submit" type="submit" value="Submit">
+    						</div>
+						</form>
+					</div>
 				</div>
 			</div>
 			
@@ -69,17 +66,18 @@
 					</div>
 
 					<hr class="hr-connect">
+					
 					<div class="text-center">
-						<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logo-imgs logo-img-margin" alt="GitHub Logo" src="assets/images/github.png"></a>
-						<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logo-imgs logo-img-margin" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
-						<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logo-imgs" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
+						<a target="_blank" href="https://github.com/JustinRyanCarlson"><img class="logo-imgs logo-img-margin opacity" alt="GitHub Logo" src="assets/images/github.png"></a>
+						<a target="_blank" href="http://stackoverflow.com/users/6754746/justin-carlson?tab=profile"><img class="logo-imgs logo-img-margin opacity" alt="StackOverflow Logo" src="assets/images/stackoverflow.png"></a>
+						<a target="_blank" href="https://www.linkedin.com/in/justinryancarlson"><img class="logo-imgs opacity" alt="LinkedIn Logo" src="assets/images/linkedin.png"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<footer class="navbar-fixed-bottom">
+	<footer class="navbar-static-bottom footer">
 		<h6 class="text-center">&copy; Copyright 2016 Justin Carlson</h6>
 	</footer>
 
